--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">V-Drive</string>
+    <string name="home">Home</string>
+    <string name="driver">Driver</string>
+    <string name="shift">Shift</string>
+    <string name="settings">Settings</string>
 </resources>
