--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,36 @@
 <resources>
     <string name="app_name">V-Drive</string>
-    <string name="home">Home</string>
-    <string name="driver">Driver</string>
-    <string name="shift">Shift</string>
-    <string name="settings">Settings</string>
-    <string name="license_must_set">License must be set</string>
-    <string name="value_too_short">Value is too short</string>
-    <string name="value_too_long">Value is too long</string>
-    <string name="phone_illegal">Phone is illegal</string>
-    <string name="value_blank">Value is blank</string>
-    <string name="value_empty">Value is empty</string>
-    <string name="list_driver">List of driver</string>
-    <string name="edit_driver">Driver to edit</string>
-    <string name="save">save</string>
-    <string name="firstname">Firstname</string>
-    <string name="lastname">Lastname</string>
-    <string name="phone">Phone</string>
-    <string name="license">License</string>
-    <string name="create_driver">Create a driver</string>
-    <string name="duration_too_short">Duration too short</string>
-    <string name="duration_too_long">Duration too long</string>
-    <string name="date_must_set">Date must set</string>
-    <string name="date_too_old">Date is too old</string>
-    <string name="date_too_far">Date is too far</string>
-    <string name="location">Location</string>
-    <string name="duration">Duration</string>
+    <string name="home">Accueil</string>
+    <string name="driver">Conducteurs</string>
+    <string name="shift">Déplacements</string>
+    <string name="settings">Paramètres</string>
+    <string name="license_must_set">Permis manquant</string>
+    <string name="value_too_short">Valeur trop courte</string>
+    <string name="value_too_long">Valeur trop longue</string>
+    <string name="phone_illegal">Numéro non conforme</string>
+    <string name="value_blank">Valeur non renseignée</string>
+    <string name="value_empty">Valeur vide</string>
+    <string name="list_driver">Liste des Conducteurs</string>
+    <string name="edit_driver">Modifier un Conducteur</string>
+    <string name="save">Sauvegarder</string>
+    <string name="firstname">Prénom</string>
+    <string name="lastname">Nom</string>
+    <string name="phone">Téléphone</string>
+    <string name="license">Permis</string>
+    <string name="create_driver">Nouveau Conducteur</string>
+    <string name="duration_too_short">Durée trop courte</string>
+    <string name="duration_too_long">Durée trop longue</string>
+    <string name="date_must_set">Date manquante</string>
+    <string name="date_too_old">Date trop ancienne</string>
+    <string name="date_too_far">Date trop lointaine</string>
+    <string name="location">Destination</string>
+    <string name="duration">Durée</string>
     <string name="date">Date</string>
-    <string name="title_day">Select a day</string>
-    <string name="date_format">Incorrect date format</string>
-    <string name="passengers">Passengers</string>
-    <string name="list_shift">List Shifts</string>
-    <string name="edit_shift">Edit shift</string>
-    <string name="create_shift">Create shift</string>
-    <string name="driver_picker">Select a driver</string>
+    <string name="title_day">Choisir un jour</string>
+    <string name="date_format">Format de date incorrecte</string>
+    <string name="passengers">Passagers</string>
+    <string name="list_shift">Liste des Déplacements</string>
+    <string name="edit_shift">Modifier un Déplacement</string>
+    <string name="create_shift">Nouveau Déplacement</string>
+    <string name="driver_picker">Choisir un conducteur</string>
 </resources>
