--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="vehicle_picker">Choisir un véhicule</string>
     <string name="add">Ajouter</string>
     <string name="shift_cut">Dépl.</string>
+    <string name="start_date">Date de début</string>
+    <string name="end_date">Date de fin</string>
 </resources>
